--- a/Copy_of_california_hosuingdata.ipynb
+++ b/Copy_of_california_hosuingdata.ipynb
@@ -25,7 +25,7 @@
       "metadata": {
         "id": "OZqOUE51jrnu"
       },
-      "execution_count": 2,
+      "execution_count": 168,
       "outputs": []
     },
     {
@@ -40,9 +40,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rGncTq5Ejzeh",
-        "outputId": "c3b43a2b-ee2f-46f4-a934-7d87f56e8f36"
+        "outputId": "28d2e343-6478-44c1-e0e3-b3cb4c26b2b9"
       },
-      "execution_count": 3,
+      "execution_count": 169,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -52,7 +52,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 169
         }
       ]
     },
@@ -66,9 +66,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mL2HWcxMnncy",
-        "outputId": "5958f64d-581c-48f1-a35e-eed6ba5e4480"
+        "outputId": "11be2d6d-2388-4d48-b33a-477072922975"
       },
-      "execution_count": 4,
+      "execution_count": 170,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "UFs3QhHXq8WN"
       },
-      "execution_count": 5,
+      "execution_count": 171,
       "outputs": []
     },
     {
@@ -102,9 +102,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fJDgtw6estJ8",
-        "outputId": "a8a09634-f4d2-43c8-e8d6-2f758d1513dc"
+        "outputId": "bfdc6335-ce5d-40a4-b371-5d25a2e09d80"
       },
-      "execution_count": 6,
+      "execution_count": 172,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,9 +141,9 @@
           "height": 300
         },
         "id": "GDzwSOwXs4RO",
-        "outputId": "45cc89ce-b391-4818-b59e-04b4e2e8000d"
+        "outputId": "c51cc237-730c-4c52-cb44-a53f882076fc"
       },
-      "execution_count": 7,
+      "execution_count": 173,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +171,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-393caaa9-4280-4c99-b64d-5d7bec5e93d0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-102ba32b-54e3-4671-ba72-f860f8caa9c1\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -304,7 +304,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-393caaa9-4280-4c99-b64d-5d7bec5e93d0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-102ba32b-54e3-4671-ba72-f860f8caa9c1')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -356,12 +356,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-393caaa9-4280-4c99-b64d-5d7bec5e93d0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-102ba32b-54e3-4671-ba72-f860f8caa9c1 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-393caaa9-4280-4c99-b64d-5d7bec5e93d0');\n",
+              "        const element = document.querySelector('#df-102ba32b-54e3-4671-ba72-f860f8caa9c1');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -381,8 +381,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a76fd713-e3e3-48b1-9330-9c6aed4d2b83\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a76fd713-e3e3-48b1-9330-9c6aed4d2b83')\"\n",
+              "<div id=\"df-7d14acd0-6be5-4c1f-8e89-1fcfef6a4695\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7d14acd0-6be5-4c1f-8e89-1fcfef6a4695')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -501,7 +501,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a76fd713-e3e3-48b1-9330-9c6aed4d2b83 button');\n",
+              "        document.querySelector('#df-7d14acd0-6be5-4c1f-8e89-1fcfef6a4695 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -516,7 +516,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 173
         }
       ]
     },
@@ -530,9 +530,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gBwjrG2Ls7lx",
-        "outputId": "e8770380-1dde-4fb2-91c2-cc295f3e3e75"
+        "outputId": "93e02919-4ae4-4e8c-e0c4-c51b19d8afec"
       },
-      "execution_count": 8,
+      "execution_count": 174,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,7 +551,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 174
         }
       ]
     },
@@ -566,9 +566,9 @@
           "height": 331
         },
         "id": "UbwvltWJtDrz",
-        "outputId": "b8da574c-f737-42b4-8978-5368b07ebcd4"
+        "outputId": "6b580183-4cd9-416f-8ff6-32ca566501d1"
       },
-      "execution_count": 9,
+      "execution_count": 175,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -598,7 +598,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-feba60bd-02be-4f3b-a223-afa619237422\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d604364e-a338-4574-9a62-05519b1daa5e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -743,7 +743,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-feba60bd-02be-4f3b-a223-afa619237422')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d604364e-a338-4574-9a62-05519b1daa5e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -795,12 +795,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-feba60bd-02be-4f3b-a223-afa619237422 button.colab-df-convert');\n",
+              "        document.querySelector('#df-d604364e-a338-4574-9a62-05519b1daa5e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-feba60bd-02be-4f3b-a223-afa619237422');\n",
+              "        const element = document.querySelector('#df-d604364e-a338-4574-9a62-05519b1daa5e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -820,8 +820,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-c197bcea-e917-425f-9c7a-b0653e289dfd\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c197bcea-e917-425f-9c7a-b0653e289dfd')\"\n",
+              "<div id=\"df-a20c0979-a8ed-4eca-bed0-108d9f0ffd20\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a20c0979-a8ed-4eca-bed0-108d9f0ffd20')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -940,7 +940,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-c197bcea-e917-425f-9c7a-b0653e289dfd button');\n",
+              "        document.querySelector('#df-a20c0979-a8ed-4eca-bed0-108d9f0ffd20 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -955,7 +955,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 175
         }
       ]
     },
@@ -972,9 +972,9 @@
           "height": 466
         },
         "id": "PjC4PrJEuMhe",
-        "outputId": "e0308e18-765d-4f09-fff8-56f2323a4aed"
+        "outputId": "d70389dc-46a3-41a2-8b48-142ed91cdc77"
       },
-      "execution_count": 10,
+      "execution_count": 176,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -984,7 +984,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 176
         },
         {
           "output_type": "display_data",
@@ -1008,7 +1008,7 @@
       "metadata": {
         "id": "5C-bOJwTvGsF"
       },
-      "execution_count": 11,
+      "execution_count": 177,
       "outputs": []
     },
     {
@@ -1022,7 +1022,7 @@
       "metadata": {
         "id": "JoT4ECrn84fq"
       },
-      "execution_count": 12,
+      "execution_count": 178,
       "outputs": []
     },
     {
@@ -1038,9 +1038,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B21zQ4NK_kZB",
-        "outputId": "7b2d433d-b545-4522-c55c-7f0d34533059"
+        "outputId": "ea00f038-4b0b-43ba-c6fe-fa3fc0a9b19f"
       },
-      "execution_count": 13,
+      "execution_count": 179,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1062,7 +1062,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 179
         }
       ]
     },
@@ -1075,7 +1075,7 @@
       "metadata": {
         "id": "uQ7IM8s7Ca8O"
       },
-      "execution_count": 14,
+      "execution_count": 180,
       "outputs": []
     },
     {
@@ -1090,7 +1090,7 @@
       "metadata": {
         "id": "3BB78smqF0MD"
       },
-      "execution_count": 15,
+      "execution_count": 181,
       "outputs": []
     },
     {
@@ -1104,19 +1104,19 @@
           "height": 447
         },
         "id": "H-pq34IQIP_O",
-        "outputId": "71a75027-2868-4215-e9bc-58c3bc87dc51"
+        "outputId": "84fc403a-23f3-4c97-ff34-1396c7c9cd62"
       },
-      "execution_count": 16,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7ea7dbe29120>"
+              "<matplotlib.collections.PathCollection at 0x79441fd67e80>"
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 182
         },
         {
           "output_type": "display_data",
@@ -1143,19 +1143,19 @@
           "height": 523
         },
         "id": "JGqrFzpIJS16",
-        "outputId": "dea49bad-88aa-4d68-b864-80bf7034bd5d"
+        "outputId": "23821905-e0aa-4ee1-8527-7dbee7d90b1c"
       },
-      "execution_count": 17,
+      "execution_count": 183,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.FacetGrid at 0x7ea7dc361780>"
+              "<seaborn.axisgrid.FacetGrid at 0x79441fdaf1f0>"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 183
         },
         {
           "output_type": "display_data",
@@ -1185,9 +1185,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w3JY_w8KJ0Rs",
-        "outputId": "5b2fc98f-14e2-42af-9842-b45282ba2ade"
+        "outputId": "ad7aa9b7-e08d-4f9a-90c6-f5292510d11f"
       },
-      "execution_count": 18,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "stream",
@@ -1205,26 +1205,22 @@
       "cell_type": "code",
       "source": [
         "housing.data[0].reshape(1,-1)\n",
-        "scaler.transform(housing.data[0].reshape(1,-1))\n",
-        "linreg.predict(scaler.transform(housing.data[0].reshape(1,-1)))\n"
+        "\n",
+        "linreg.predict(housing.data[1].reshape(1,-1))\n"
       ],
       "metadata": {
         "id": "b_2_6R1mcfAa",
+        "outputId": "54ae1494-f026-4937-d942-cf7c1ffb07ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "cbcd9a28-df94-4644-ea16-b59e5735699b"
+        }
       },
-      "execution_count": 19,
+      "execution_count": 185,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
-            "  warnings.warn(\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
             "  warnings.warn(\n"
           ]
@@ -1233,21 +1229,36 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([-35.2418248])"
+              "array([3.96609523])"
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 185
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pickle\n",
+        "\n",
+        "# Save the scaler object\n",
+        "pickle.dump(scaler, open('scaling.pkl', 'wb'))\n",
+        "\n",
+        "# Save the regression model object\n",
+        "pickle.dump(linreg, open('regmodel.pkl', 'wb'))\n",
+        "\n",
+        "# Load the scaler object\n",
+        "scaler = pickle.load(open('scaling.pkl', 'rb'))\n",
+        "\n",
+        "# Load the regression model object\n",
+        "regmodel = pickle.load(open('regmodel.pkl', 'rb'))\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "tQnO0NTWdgXt"
+        "id": "hXTTyp2KCaMe"
       },
-      "execution_count": 19,
+      "execution_count": 186,
       "outputs": []
     }
   ]
